fixed the broken css

--- a/source/stylesheets/features/us-healthcare.css.scss
+++ b/source/stylesheets/features/us-healthcare.css.scss
@@ -6,17 +6,6 @@ $black : #000;
 $dark-blue: #004363;
 $light-blue:#6496c8;
 
-.jumbotron {
-  height:600px;
-  background-image: url("https://farm6.staticflickr.com/5473/11383979236_97370fc858_o.jpg"); 
-  background-size: cover;
-  color: white;
-  text-shadow: 1px 1px black;
-  text-align: center;
-  vertical-align: baseline;
-  padding-top: 200px;
-}
-
 header p{
   text-align: center;
 }
@@ -55,8 +44,6 @@ h3 {
     text-align: center;
 }
 
-<<<<<<< HEAD
-=======
 .jumbotron {
   color: white;
   height: 600px;
@@ -68,8 +55,6 @@ h3 {
 */
   text-shadow: 2px 2px black;
 }
-
->>>>>>> origin/ushealthcare-feature
 
 /* TABLE */
 
